<resources>
    <string name="app_name">Pasiflonet Mobile</string>
    <string name="settings_title">Settings</string>
    <string name="target_channel_label">Target Telegram channel (optional)</string>
    <string name="channel_hint">e.g. @MyChannel</string>
    <string name="logo_label">Channel logo</string>
    <string name="select_logo">Select logo</string>
    <string name="clear_cache">Clear cache</string>
    <string name="save_settings">Save settings</string>
    <string name="tiktok_cookies_label">TikTok cookies file</string>
    <string name="tiktok_cookies_empty">No TikTok cookies file selected</string>
    <string name="select_tiktok_cookies">Pick cookies file</string>
    <string name="clear_tiktok_cookies">Clear cookies</string>
</resources>
